--- a/Dai-Lete/Dai-Lete.csproj
+++ b/Dai-Lete/Dai-Lete.csproj
@@ -14,4 +14,12 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.151" />
+      <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.10" />
+      <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0-preview.7.23375.6" />
+      <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    </ItemGroup>
+
 </Project>
