--- a/Dai-Lete/Properties/launchSettings.json
+++ b/Dai-Lete/Properties/launchSettings.json
@@ -23,7 +23,9 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7225;http://localhost:5078",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "baseAddress":"127.0.0.1:7225",
+        "proxyAddress":"192.168.20.34"
       }
     },
     "IIS Express": {
