idk, work on c# version

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -1,9 +1,19 @@
-{
+  {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    "Sentry": {
+      "Dsn": "https://b20ba4c811d0446683affb32912647de@bugsync.locksley.dev/3",
+      "SendDefaultPii": true,
+      "MaxRequestBodySize": "Always",
+      "MinimumBreadcrumbLevel": "Debug",
+      "MinimumEventLevel": "Warning",
+      "AttachStackTrace": true,
+      "Debug": true,
+      "DiagnosticLevel": "Error"
+    },
   "AllowedHosts": "*"
 }
