--- a/Dai-Lete/Dai-Lete.csproj
+++ b/Dai-Lete/Dai-Lete.csproj
@@ -13,9 +13,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.151" />
+    <PackageReference Include="Sentry.AspNetCore" Version="5.11.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0-rc.2.23480.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0-rc.2.23479.6" />
+    <PackageReference Include="Whisper.net" Version="1.8.1" />
+    <PackageReference Include="Whisper.net.Runtime" Version="1.8.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="tests\fixtures\transcripts\" />
   </ItemGroup>
 </Project>
