:recycle: DB and logging update.

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -5,15 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "Sentry": {
-      "Dsn": "https://b20ba4c811d0446683affb32912647de@bugsync.locksley.dev/3",
-      "SendDefaultPii": true,
-      "MaxRequestBodySize": "Always",
-      "MinimumBreadcrumbLevel": "Debug",
-      "MinimumEventLevel": "Warning",
-      "AttachStackTrace": true,
-      "Debug": true,
-      "DiagnosticLevel": "Error"
-    },
+  "Sentry": {
+    "Dsn": "https://b20ba4c811d0446683affb32912647de@bugsync.locksley.dev/3",
+    "SendDefaultPii": true,
+    "MaxRequestBodySize": "Always",
+    "MinimumBreadcrumbLevel": "Debug",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": true,
+    "DiagnosticLevel": "Error"
+  },
+  "Database": {
+    "Path": "Podcasts/Podcasts.sqlite"
+  },
+  "Podcast": {
+    "StoragePath": "Podcasts",
+    "FeedCacheExpirationHours": 1,
+    "ProcessingIntervalHours": 1,
+    "QueueCheckIntervalSeconds": 10
+  },
   "AllowedHosts": "*"
 }
