:art: Whisper transcription working.

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -24,5 +24,8 @@
     "ProcessingIntervalHours": 1,
     "QueueCheckIntervalSeconds": 10
   },
+  "Whisper": {
+    "ModelPath": "models/ggml-base.bin"
+  },
   "AllowedHosts": "*"
 }
