:passport_control: Update to asp.net auth

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -27,5 +27,9 @@
   "Whisper": {
     "ModelPath": "models/ggml-base.bin"
   },
+    "Auth":{
+      "Username": "admin",
+      "Password": "admin"
+    },
   "AllowedHosts": "*"
 }
