:sparkles: Add metrics to track if this still works, only 50% sure.

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -24,7 +24,15 @@
     "ProcessingIntervalHours": 1,
     "QueueCheckIntervalSeconds": 10
   },
-
+  "MetricsIpFilter": {
+    "AllowedIps": [
+      "127.0.0.1",
+      "::1",
+      "10.0.0.0/8",
+      "172.16.0.0/12",
+      "192.168.0.0/16"
+    ]
+  },
     "Auth":{
       "Username": "admin",
       "Password": "admin"
