--- a/Dai-Lete/appsettings.Development.json
+++ b/Dai-Lete/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MetricsIpFilter": {
+    "AllowedIps": [
+      "127.0.0.1",
+      "::1",
+      "0.0.0.0/0"
+    ]
   }
 }
