revert removal of episode eprocessing

--- a/Dai-Lete/appsettings.json
+++ b/Dai-Lete/appsettings.json
@@ -37,5 +37,6 @@
       "Username": "admin",
       "Password": "admin"
     },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+    "ProxyAddress": "192.168.20.34:1080"
 }
