--- a/Dai-Lete.Tests/Dai-Lete.Tests.csproj
+++ b/Dai-Lete.Tests/Dai-Lete.Tests.csproj
@@ -26,5 +26,10 @@
     <ProjectReference Include="../Dai-Lete/Dai-Lete.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="TestData\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
