:recycle: replace ai metrics :( this is less and less of a vibe

--- a/Dai-Lete/Dai-Lete.csproj
+++ b/Dai-Lete/Dai-Lete.csproj
@@ -18,8 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.0" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.0" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
-    <PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
 
   </ItemGroup>
   <ItemGroup>
